--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:/test
+    url: jdbc:h2:mem:test
     driverClassName: org.h2.Driver
     username: sa
     password:
@@ -13,4 +13,3 @@ spring:
       settings:
         trace: false
         web-allow-others: false
-#  Recolher
