--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:h2:mem:test
     driverClassName: org.h2.Driver
     username: sa
-    password:
+    password: 1234
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2:
