--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
-    password: 1234
+    password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2:
